--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 body {
   background-color: #eee;
   font-family: 'Lato', sans-serif;
+  font-size: 1.414em;
   font-weight: 400;
   line-height: 1.45;
   color: #333;
